fix for link description overflow

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -103,6 +103,7 @@
   color: #999999;
   height: 210px;
   word-break: break-all;
+  overflow: hidden;
 }
 .collection-page .link-container .link-title{
   position: absolute;
